--- a/changelogs/v0.1.0.md
+++ b/changelogs/v0.1.0.md
@@ -3,7 +3,8 @@
 date: Wed Dec 28 2016
 
 ### Changes
-- ...
-
-### Fixes
-- ...
+A very simplified version of the game:
+- the 32 levels are present,
+- the ball bounces,
+- the vaus moves and allows to throw back the ball,
+- bricks (except golden bricks) can be destroyed by the ball.
