--- a/sources/changelogs/v0.1.0.md
+++ b/sources/changelogs/v0.1.0.md
@@ -1,7 +1,7 @@
-## Release v0.1.0
-
+---
 date: Wed Dec 28 2016
-
+title: Release v0.1.0
+---
 ### Changes
 A very simplified version of the game:
 - the 32 levels are present,
