--- a/sources/changelogs/v0.3.0.md
+++ b/sources/changelogs/v0.3.0.md
@@ -3,7 +3,5 @@ title: Release v0.3.0
 date: Fri Jan 13 2017
 ---
 ### Changes
-- ...
-
-### Fixes
-- ...
+- First implementation of a sound engine
+- Ball emits sounds on collision with Vaus and bricks
