--- a/sources/changelogs/v0.4.0.md
+++ b/sources/changelogs/v0.4.0.md
@@ -3,7 +3,5 @@ title: Release v0.4.0
 date: Fri Mar 10 2017
 ---
 ### Changes
-- ...
-
-### Fixes
-- ...
+- Display your score
+- You have three lifes
