--- a/sources/changelogs/v0.5.0.md
+++ b/sources/changelogs/v0.5.0.md
@@ -3,7 +3,14 @@ title: Release v0.5.0
 date: Tue May 02 2017
 ---
 ### Changes
-- ...
-
-### Fixes
-- ...
+- Ball speed increases when it hits the roof.
+- Ball speed slows down when it hits the Vaus.
+- Ball bounce on the Vaus as in the original game.
+- Power Up
+  - Ball disruption, 
+  - Catch ball,
+  - Expand,
+  - Extra life,
+  - Laser,
+  - Slow ball speed.
+- You earn an extra life every 20000 points.
