--- a/sources/changelogs/v0.5.1.md
+++ b/sources/changelogs/v0.5.1.md
@@ -2,8 +2,6 @@
 title: Release v0.5.1
 date: Fri May 05 2017
 ---
-### Changes
-- ...
-
 ### Fixes
-- ...
+- Fixed a bug that prevents the game from starting on Firefox browsers
+- Fixed a bug that caused the game to crash on certain browsers
