--- a/sources/changelogs/v0.7.0.md
+++ b/sources/changelogs/v0.7.0.md
@@ -3,7 +3,4 @@ title: Release v0.7.0
 date: Sat May 20 2017
 ---
 ### Changes
-- ...
-
-### Fixes
-- ...
+- Wait one second before throwing the ball when game starts
